@@ -29,10 +29,14 @@ cp=$cp:$SCRIPT_PATH/ext/*
 # When running in batch mode on a system with no X11 installed, the option
 #   -Djava.awt.headless=true
 # might be needed for some combinations of OS and JDK
+
+# For High-DPI screens the following system properties might be needed:
+# -Dsun.java2d.uiScale=125%
+# -Dsun.java2d.uiScale.enabled=false
+
 # For Java 9 and above the following options might be needed:
 # --add-opens java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED
 # --add-opens java.base/java.lang=ALL-UNNAMED 
 
-exec "$JAVACMD" --add-opens java.base/java.lang=ALL-UNNAMED \
-                -Dawt.useSystemAAFontSettings=on \
+exec "$JAVACMD" -Dawt.useSystemAAFontSettings=on \
                 -Dvisualvm.display.name=SQLWorkbenchJ -cp "$cp" workbench.WbStarter "$@"
